--- a/XamarinExample/XamarinExample/MainPage.xaml
+++ b/XamarinExample/XamarinExample/MainPage.xaml
@@ -11,7 +11,8 @@
         <Label Text="Welcome to Xamarin.Forms!" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
-        <Button Text="Click Me" Clicked="Button_Clicked" />
+        <Button Text="Update" Clicked="Button_Update" />
+        <Button Text="Call" Clicked="Button_Call" />
     </StackLayout>
 
 </ContentPage>
